--- a/client/views/roastCreate.html
+++ b/client/views/roastCreate.html
@@ -22,6 +22,24 @@
                         <p class="pull-right mTop0" style="color:grey">{{descChar}} words left</p>
                     </div>
                     <div class="col-xs-12">
+                        <h2>Single image with resizing</h2>
+                        <div>
+                            <label for="inputImage2">Image 2</label>
+                            
+                            <input id="inputImage2" 
+                                type="file" 
+                                accept="image/*" 
+                                image="image2" 
+                                resize-max-height="300"
+                                resize-max-width="250"
+                                resize-quality="0.7" />
+                            
+                            <p>Original</p>
+                            <img ng-show="image2" ng-src="{{image2.url}}" type="{{image2.file.type}}"/>
+                            <p>Resized</p>
+                            <img ng-show="image2" ng-src="{{image2.resized.dataURL}}"/>
+                            <button type="submit" ng-click="single(image2.resized)">Add</button>
+                        </div>
                         <div class="addImage">Add Image</div>
                     </div>
                     <div class="col-xs-12">
