--- a/client/views/QandApage.html
+++ b/client/views/QandApage.html
@@ -56,7 +56,7 @@
                                     <div class="row" style="margin-top:20px;border-bottom:1px solid gainsboro">
                                         <p align="center">Total = <b>{{TotalVotes}} Votes</b></p>
                                     </div>
-                                    <div class="col-xs-12" style="margin-top:-10px">
+                                    <div class="col-xs-12" style="margin-top:-5px;margin-bottom:-50px">
                                         <p class="pull-right">
                                             <img class="hand" social-facebook src="../images/facebook.png"/>
                                             <img class="hand" social-twitter src="../images/twitter.png"/>
@@ -65,7 +65,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xs-12" ng-hide="showVotes" style="margin-top:-20px">
+                            <div class="col-xs-12" ng-hide="showVotes" style="margin-top:-20px;">
                                 <p class="pull-right">
                                     <img class="hand" social-facebook src="../images/facebook.png"/>
                                     <img class="hand" social-twitter src="../images/twitter.png"/>
@@ -87,7 +87,7 @@
                                         <div class="col-xs-12" style="font-size:12px;
         margin-top:20px;">
                                                     <div>
-                                                        <span class="pull-left replyBtn">Reply</span><span class="pull-left replyBtn">Share</span>
+                                                        <span class="pull-left replyBtn">Reply</span><span class="pull-left replyBtn">Comments</span>
                                                         <div class="appreciateBtn hand pull-right" ng-class="appreciated?'appreciatedBtn':'appreciateBtn'" ng-click="appreciate(qna)">{{appriValue}}</div><span class="appriNo pull-right">123</span>
                                                     </div>
                                                 </div>
